# StudyBudd

./: .gitignore  Makefile  README.md  RUNBOOK.md  docker-compose.dev.yml  docker-compose.yml  docker-run.sh  justfile  package-lock.json  package.json  playwright.config.js
apps/api/: Dockerfile  README.md  pyproject-Anderson_PC.toml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260212_000001_pgvector_public_schema.py  20260221_000001_add_folders.py  20260224_000001_add_document_shares_and_profile_policies.py  20260302_000001_fix_embedding_dimension.py  20260302_000002_add_flashcard_quiz_tables.py  20260302_000003_add_flashcard_set_source_chunks.py
apps/api/app/: main.py
apps/api/app/chat/: agent.py  models.py  router.py  schemas.py  service.py  tools.py
apps/api/app/core/: config.py  database.py  dependencies.py  models.py  supabase.py
apps/api/app/documents/: __init__.py  models.py  router.py  schemas.py  service.py  text_extraction.py
apps/api/app/flashcards/: models.py  router.py  schemas.py  service.py
apps/api/app/folders/: __init__.py  router.py  schemas.py  service.py
apps/api/app/inference/: client.py  prompts.py
apps/api/app/processing/: models.py  router.py  schemas.py  service.py
apps/api/app/quizzes/: models.py  router.py  schemas.py  service.py
apps/api/studybudd_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: README.md  conftest.py  test_chat.py  test_chat_full.py  test_documents.py  test_flashcards.py  test_folders.py  test_processing.py  test_quizzes.py
(+152 files in other folders)
